assets/styles/_general.scss
*{
    padding: 0;
    margin: 0;
    list-style: none;
    text-decoration: none;
}

html{
    overflow-x: hidden;
}

body {
    background-color: $secondaryColor;
    color: $thirdColor;
    font-family: 'Didact Gothic';
}

input, select{
    font-family: 'Didact Gothic';
}

h1,h2,h3,h4{
    font-family: 'Alegreya';
}

.displayNone{
    display: none;
}

a{
    &:hover{
        color: $primaryColor;
    }
}

button{
    background-color: transparent;
    color: $thirdColor;
    font-size: 20px;
    padding: 5px 20px;
    border: 1px solid $primaryColor;
    font-family: 'Alegreya';
    text-transform: uppercase;
    transition: all 0.3 ease-in-out;
    &:hover{
        background-color: $primaryColor;
        transform: translateY(-2px);
    }
}

.btn{
    color: $thirdColor;
    border: 2px solid $primaryColor;
    padding: 4px 15px;
    background-color: $secondaryColor;
    transition: all 0.3 ease-in-out;
    &:hover{
        transform: translateY(-1px);
    }
}

.error{
    color: #DC3622;
    text-align: center;
}

/*server type*/

.PVE{
    background-color: $secondaryColor;
    color: white;
    border-radius: 10px;
    padding:1px 7px;
}

.PVP{
    background-color: #EB5F4E;
    color: white;
    border-radius: 10px;
    padding:1px 7px;
}

.separator{
    width: 90%;
    margin: auto;
    background-color: $thirdColor;
    height: 10px;
    margin-bottom: 1em;
}

/*pagination*/

.pagination{
    display: flex;
    justify-content: center;
    gap: 5px;
    margin: 2em auto;
    span{
        border: 2px solid transparent;
        box-sizing: content-box;
        padding:2px 9px 3px;
        transition: all ease-in-out 0.2ms;
    }
    span.page{
        background-color: #DC3622;
        border-radius: 50%;
        a{
            color: white;
        }
        &:hover{
            background-color: transparent;
            border: #DC3622 2px solid;
            a{
                color: #DC3622;
            }
        }
    }
    span.current{
        background-color: transparent;
        border: #DC3622 2px solid;
        padding:2px 10px 3px 9px;
        a{
            color: #DC3622;
        }
        border-radius: 50%;
        &:hover{
            background-color: #DC3622;
            a{
                color: white;
            }
        }
    }
    span.next,span.last{
        color: #DC3622;
        transform: scale(150%);
        font-weight: bold;
        a{
            color: #DC3622;
            &:hover{
                color: white;
            }
        }
    }
}

